Issue #4874: Most builtin decoders now reject unicode input.